# piscine_rust

./: .gitignore  clean.fish  clean.sh
module-00/ex02/: print_bytes.rs
module_00/: subject.md
module_00/ex00/: hello.rs
module_00/ex01/: min.rs
module_00/ex02/: collatz.rs  print_bytes.rs  yes.rs
module_00/ex03/: fizzbuzz.rs
module_00/ex04/: Cargo.toml
module_00/ex05/: Cargo.toml
module_00/ex06/: Cargo.toml
module_00/ex07/: Cargo.toml
module_01/: subject.md
module_01/ex00/: Cargo.toml
module_01/ex01/: Cargo.toml
module_01/ex02/: Cargo.toml
module_01/ex03/: Cargo.toml
module_01/ex04/: Cargo.toml
module_01/ex05/: Cargo.toml
module_01/ex06/: Cargo.toml
module_01/ex07/: Cargo.toml
module_02/: subject.md
module_02/ex00/: Cargo.toml
module_02/ex01/: Cargo.toml
module_02/ex02/: Cargo.toml
module_02/ex03/: Cargo.toml
module_02/ex04/: Cargo.toml
module_02/ex05/: Cargo.toml
module_02/ex06/: Cargo.toml
module_02/ex07/: Cargo.toml
module_03/: subject.md
module_03/ex00/: Cargo.toml
module_03/ex01/: Cargo.toml
module_03/ex02/: Cargo.toml
module_03/ex03/: Cargo.toml
module_03/ex04/: Cargo.toml
module_03/ex05/: Cargo.toml
module_03/ex06/: Cargo.toml
module_03/ex07/: Cargo.toml
module_04/: Cargo.toml  subject.md
module_04/ex00/: Cargo.toml
module_04/ex01/: Cargo.toml
module_04/ex01/src/: collayz.rs  print_bytes.rs  yes.rs
module_04/ex02/: Cargo.toml
module_04/ex03/: Cargo.toml
module_04/ex04/: Cargo.toml
module_05/: subject.md
module_06/: subject.md
module_07/: subject.md
(+95 files in other folders)
